added button animations

--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ body {
     #main #races .button {
       display: inline-block;
       position: relative;
+      transition: opacity 0.5s ease-in-out;
       margin: 5px 6px 5px 6px; }
       #main #races .button.darkened {
         opacity: 0.3; }
@@ -167,7 +168,8 @@ body {
     max-height: 97%; }
     #main #race-info .button {
       display: inline-block;
-      position: relative; }
+      position: relative;
+      transition: opacity 0.5s ease-in-out; }
       #main #race-info .button.darkened {
         opacity: 0.3; }
       #main #race-info .button .icon {
@@ -302,6 +304,7 @@ body {
       #main #classes #class-group .button {
         display: inline-block;
         position: relative;
+        transition: opacity 0.5s ease-in-out;
         margin: 5px 6px 3px 6px !important; }
         #main #classes #class-group .button.darkened {
           opacity: 0.3; }
@@ -370,6 +373,7 @@ body {
       #main #classes #class-filters #class-roles .button[role="tank"] {
         display: inline-block;
         position: relative;
+        transition: opacity 0.5s ease-in-out;
         margin: 5px 6px 3px 6px; }
         #main #classes #class-filters #class-roles .button[role="tank"].darkened {
           opacity: 0.3; }
@@ -414,6 +418,7 @@ body {
       #main #classes #class-filters #class-roles .button[role="healer"] {
         display: inline-block;
         position: relative;
+        transition: opacity 0.5s ease-in-out;
         margin: 5px 6px 3px 6px; }
         #main #classes #class-filters #class-roles .button[role="healer"].darkened {
           opacity: 0.3; }
@@ -458,6 +463,7 @@ body {
       #main #classes #class-filters #class-roles .button[role="melee"] {
         display: inline-block;
         position: relative;
+        transition: opacity 0.5s ease-in-out;
         margin: 5px 6px 3px 6px; }
         #main #classes #class-filters #class-roles .button[role="melee"].darkened {
           opacity: 0.3; }
@@ -502,6 +508,7 @@ body {
       #main #classes #class-filters #class-roles .button[role="ranged"] {
         display: inline-block;
         position: relative;
+        transition: opacity 0.5s ease-in-out;
         margin: 5px 6px 3px 6px; }
         #main #classes #class-filters #class-roles .button[role="ranged"].darkened {
           opacity: 0.3; }
@@ -548,6 +555,7 @@ body {
         #main #classes #class-filters #class-gear .button[data="Plate"] {
           display: inline-block;
           position: relative;
+          transition: opacity 0.5s ease-in-out;
           margin: 5px 6px 3px 6px; }
           #main #classes #class-filters #class-gear .button[data="Plate"].darkened {
             opacity: 0.3; }
@@ -592,6 +600,7 @@ body {
         #main #classes #class-filters #class-gear .button[data="Mail"] {
           display: inline-block;
           position: relative;
+          transition: opacity 0.5s ease-in-out;
           margin: 5px 6px 3px 6px; }
           #main #classes #class-filters #class-gear .button[data="Mail"].darkened {
             opacity: 0.3; }
@@ -636,6 +645,7 @@ body {
         #main #classes #class-filters #class-gear .button[data="Leather"] {
           display: inline-block;
           position: relative;
+          transition: opacity 0.5s ease-in-out;
           margin: 5px 6px 3px 6px; }
           #main #classes #class-filters #class-gear .button[data="Leather"].darkened {
             opacity: 0.3; }
@@ -680,6 +690,7 @@ body {
         #main #classes #class-filters #class-gear .button[data="Cloth"] {
           display: inline-block;
           position: relative;
+          transition: opacity 0.5s ease-in-out;
           margin: 5px 6px 3px 6px; }
           #main #classes #class-filters #class-gear .button[data="Cloth"].darkened {
             opacity: 0.3; }
@@ -887,10 +898,11 @@ body {
       justify-content: space-evenly;
       margin-top: 15px; }
       #main #class-info-specs .button {
-        transition: opacity .5s ease-in-out; }
+        transition: opacity 0.5s ease-in-out; }
         #main #class-info-specs .button[role="tank"] {
           display: inline-block;
-          position: relative; }
+          position: relative;
+          transition: opacity 0.5s ease-in-out; }
           #main #class-info-specs .button[role="tank"].darkened {
             opacity: 0.3; }
           #main #class-info-specs .button[role="tank"] .icon {
@@ -933,7 +945,8 @@ body {
             text-shadow: #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px; }
         #main #class-info-specs .button[role="healer"] {
           display: inline-block;
-          position: relative; }
+          position: relative;
+          transition: opacity 0.5s ease-in-out; }
           #main #class-info-specs .button[role="healer"].darkened {
             opacity: 0.3; }
           #main #class-info-specs .button[role="healer"] .icon {
@@ -976,7 +989,8 @@ body {
             text-shadow: #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px; }
         #main #class-info-specs .button[role="melee"] {
           display: inline-block;
-          position: relative; }
+          position: relative;
+          transition: opacity 0.5s ease-in-out; }
           #main #class-info-specs .button[role="melee"].darkened {
             opacity: 0.3; }
           #main #class-info-specs .button[role="melee"] .icon {
@@ -1019,7 +1033,8 @@ body {
             text-shadow: #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px; }
         #main #class-info-specs .button[role="ranged"] {
           display: inline-block;
-          position: relative; }
+          position: relative;
+          transition: opacity 0.5s ease-in-out; }
           #main #class-info-specs .button[role="ranged"].darkened {
             opacity: 0.3; }
           #main #class-info-specs .button[role="ranged"] .icon {
@@ -1061,7 +1076,7 @@ body {
             text-decoration: underline;
             text-shadow: #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px, #333 0px 0px 4px; }
         #main #class-info-specs .button[selected] {
-          opacity: .2; }
+          opacity: 0.2; }
           #main #class-info-specs .button[selected] .caption {
             display: none !important; }
     #main #class-info #spec-info-description {
